<resources>
    <string name="app_name">JA2</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="validate_form_input_observation">Please input form observation</string>
    <string name="title_list_hike_screen">List hike</string>
    <string name="title_add_hike_screen">Add hike</string>
    <string name="title_edit_hike_screen">Update hike</string>
    <string name="hint_input_user_name">Name of Hike(*)</string>
    <string name="hint_input_email">Contact(*)</string>
    <string name="hint_input_description">Description</string>
    <string name="hint_input_location">Location(*)</string>
    <string name="hint_input_length">Distance(km*)</string>
    <string name="title_field_available">Available</string>
    <string name="toast_message_create_hike_successful">Create hike successful</string>
    <string name="toast_message_remove_hike_successful">Remove account successful</string>
    <string name="toast_message_update_hike_successful">Update hike successful</string>
    <string name="title_dialog_confirm">Confirm dialog</string>
    <string name="message_dialog_confirm">Do you want to save data hike?</string>
    <string name="button_confirm">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_input_search">Search ...</string>
    <string name="title_observation">Time of observation</string>
    <string name="title_date">Date(*):</string>
    <string name="title_time">Time(*):</string>
    <string name="hint_input_note">Name of Obvervation</string>
    <string name="title_add_observation_screen">Create new observation</string>
    <string name="title_update_observation_screen">Update observation</string>
    <string name="hint_input_date">dd/MM/YYYY</string>
    <string name="hint_input_time">HH/mm</string>
    <string name="title_button_save">Save</string>
    <string name="validate_form_input_hike">Error validate input hike</string>
    <string name="general_level">Level %1$d</string>
    <string name="general_distance">%1$skm</string>
    <string name="message_not_found_data_result">Not yet data result\nPlease add data Hike</string>
    <string name="button_add">Add Hike</string>
</resources>