<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_title_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_title_screen"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_view_title_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title screen" />

        <ImageView
            android:id="@+id/image_view_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/ic_edit_task"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_title_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_title_screen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/title_observation"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_toolbar" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/title_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <EditText
        android:id="@+id/edit_text_date"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:clickable="false"
        android:editable="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_input_date"
        app:layout_constraintEnd_toStartOf="@+id/image_view_date"
        app:layout_constraintStart_toEndOf="@+id/text_view_date"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title"
        tools:ignore="Deprecated" />

    <ImageView
        android:id="@+id/image_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:onClick="onClick"
        android:src="@drawable/ic_calender"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_date" />

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/title_time"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date" />

    <EditText
        android:id="@+id/edit_text_time"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:clickable="false"
        android:editable="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_input_time"
        app:layout_constraintEnd_toStartOf="@+id/image_view_time"
        app:layout_constraintStart_toEndOf="@+id/text_view_time"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date"
        tools:ignore="Deprecated" />

    <ImageView
        android:id="@+id/image_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:onClick="onClick"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_time" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_16sdp"
        android:hint="@string/hint_input_note"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/text_view_time">

        <EditText
            android:id="@+id/edit_text_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:lines="8" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/title_button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>