<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_title_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_title_screen"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_view_title_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title screen" />

        <ImageView
            android:id="@+id/image_view_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/ic_remove"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_title_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_title_screen"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/image_view_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/ic_add"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_title_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_title_screen"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="right"
        app:constraint_referenced_ids="text_view_username, text_view_description, text_view_location" />

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/hint_input_user_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_user_name" />

    <EditText
        android:id="@+id/edit_text_user_name"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_toolbar" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/hint_input_description"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_description" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_name" />

    <TextView
        android:id="@+id/text_view_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/hint_input_location"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_location" />

    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_description" />

    <TextView
        android:id="@+id/text_view_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/hint_input_length"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_length" />

    <EditText
        android:id="@+id/edit_text_length"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_location" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <CheckBox
        android:id="@+id/check_box_available"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:checked="true"
        android:text="@string/title_field_available"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_length" />

    <Spinner
        android:id="@+id/spinner_level"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/check_box_available"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guide_line_50"
        app:layout_constraintTop_toTopOf="@+id/check_box_available" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:drawableLeft="@drawable/ic_calender"
        android:drawablePadding="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/hint_input_date"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_level" />

    <LinearLayout
        android:id="@+id/linear_layout_group_task"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date">

        <RelativeLayout
            android:id="@+id/relative_layout_title_observation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:padding="@dimen/_16sdp"
            android:paddingHorizontal="@dimen/_8sdp">

            <TextView
                android:id="@+id/text_view_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/title_observation"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_view_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:onClick="onClick"
                android:src="@drawable/ic_add_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/white" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_title_observation"
            tools:itemCount="10"
            tools:listitem="@layout/item_task" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>